# daily-knowledge-engine

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
dke/: cli.py  models.py  openai_image.py  sample_data.py  verify.py
skills/: les_cimes.py
tests/: test_image_generation.py  test_verification.py
