[project]
name = "daily-knowledge-engine"
version = "0.1.0"
description = "Daily verified editorial knowledge engine for SpiritualCept publications"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.7", "jinja2>=3.1", "typer>=0.12"]


[project.optional-dependencies]
dev = ["pytest>=8.0"]
image = ["openai>=1.0.0"]

[project.scripts]
dke = "dke.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["dke", "skills"]
